--- a/index.html
+++ b/index.html
@@ -10,50 +10,43 @@
 	<script src="https://kit.fontawesome.com/46c0e5fc09.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div id="container">
-
-	<div id="nav">
-		<div class="logo">
-			<span>
-				<a href="#">
-					<img src="img/logo.png" alt="Logo">
-				</a>
-			</span>
-		</div>
-		<div  class="menu-hamburger" onclick="hamFunction(this)">
+	<div class="container">
+		<div class="nav-xs">
+				<div class="logo">
+					<h1>EK</h1>
+				</div>
+				<div class="menu-xs" onclick="hamFunction(this)">
 					<div class="ham1"></div>
 					<div class="ham2"></div>
 					<div class="ham3"></div>
+				</div>
+		</div>
+		<div class="banner-xs">
+			<div class="card">
+				<h3>My name is</h3>
+				<h1>Edgaras Koncevicius</h1>
+				<h3>I'm web developer</h3>
+			</div>
+			<div class="scroll-down">
+				<a href="#">
+					<p>scroll<br>
+					down<br>
+					<i class="fa-solid fa-chevron-down"></i>
+				</p>
+				</a>
+
+			</div>
+		</div>
+		<div class="projects-xs">
+
+		</div>
+		<div class="contact-xs">
+
 		</div>
 
-		</div>
-		<!-- <div class="menu">
-			<ul>
-				<li>
-					<a href="#">About Me</a>
-				</li>
-				<li>
-					<a href="#">My Portfolio</a>
-				</li>
-				<li>
-					<a href="#">Coding Exmaples</a>
-				</li>
-				<li>
-					<a href="#">SCS Scheme</a>
-				</li>
-				<li>
-					<a href="#">Contact Me</a>
-				</li>
-			</ul>
 
-		</div> -->
-	</div>
-	<div id="main">
 
 	</div>
-
-</div>
-
-<script src="main.js" charset="utf-8"></script>
+	<script src="main.js" charset="utf-8"></script>
 </body>
 </html>
