added test colors
test colours

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
 			</div>
 			<div class="scroll-down">
 				<a href="#">
-					<p>scroll<br>
-					down<br>
+					<p>scroll <br>
+						down<br>
 					<i class="fa-solid fa-chevron-down"></i>
 				</p>
 				</a>
 
 			</div>
 		</div>
-		<div class="projects-xs">
+		<!-- <div class="projects-xs">
 
 		</div>
 		<div class="contact-xs">
 
-		</div>
+		</div> -->
 
 
 
