--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 	<script src="https://kit.fontawesome.com/46c0e5fc09.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<div class="container">
-		<div class="nav-xs">
-				<div class="logo">
-					<h1>EK</h1>
-				</div>
-				<div class="menu-xs" onclick="hamFunction(this)">
+<div id="container">
+
+	<div id="nav">
+		<div class="logo">
+			<span>
+				<a href="#">
+					<img src="img/logo.png" alt="Logo">
+				</a>
+			</span>
+		</div>
+		<div  class="menu-hamburger" onclick="hamFunction(this)">
 					<div class="ham1"></div>
 					<div class="ham2"></div>
 					<div class="ham3"></div>
@@ -44,9 +49,34 @@
 
 		</div> -->
 
+		</div>
+		<!-- <div class="menu">
+			<ul>
+				<li>
+					<a href="#">About Me</a>
+				</li>
+				<li>
+					<a href="#">My Portfolio</a>
+				</li>
+				<li>
+					<a href="#">Coding Exmaples</a>
+				</li>
+				<li>
+					<a href="#">SCS Scheme</a>
+				</li>
+				<li>
+					<a href="#">Contact Me</a>
+				</li>
+			</ul>
 
+		</div> -->
+	</div>
+	<div id="main">
 
 	</div>
-	<script src="main.js" charset="utf-8"></script>
+
+</div>
+
+<script src="main.js" charset="utf-8"></script>
 </body>
 </html>
