--- a/index.html
+++ b/index.html
@@ -37,10 +37,58 @@
 
 			</div>
 		</div>
-		<!-- <div class="projects-xs">
+		<div class="projects-xs">
+			<h1>12</h1>
+			<div class="project-card">
 
+				<!-- <img src="images\img\_105966414_gettyimages-871919258.jpg" alt="">
+				<h1>Project Two</h1>
+				<a href="#">View Project &#8594;</a> -->
+			</div>
+			<!-- <div class="project-card">
+				<span>
+					<img src="images\img\_105966414_gettyimages-871919258.jpg" alt="">
+					<h1>Project One</h1>
+					<a href="#">View Project &#8594;</a>
+				</span>
+			</div>
+			<div class="project-card">
+				<span>
+					<img src="images\img\2018-03-12-image-4.webp" alt="">
+					<h1>Project Two</h1>
+					<a href="#">View Project &#8594;</a>
+				</span>
+			</div>
+			<div class="project-card">
+				<span>
+					<img src="images\img\beboy-1280x720.jpg" alt="">
+					<h1>Project Three</h1>
+					<a href="#">View Project &#8594;</a>
+				</span>
+			</div>
+			<div class="project-card">
+				<span>
+					<img src="images\img\file.jpg" alt="">
+					<h1>Project Four</h1>
+					<a href="#">View Project &#8594;</a>
+				</span>
+			</div>
+			<div class="project-card">
+				<span>
+					<img src="images\img\WWW_WebBirthday_2018.jpg" alt="">
+					<h1>Project Five</h1>
+					<a href="#">View Project &#8594;</a>
+				</span>
+			</div>
+			<div class="project-card">
+				<span>
+					<img src="images\img\august-1-world-wide-web-day.webp" alt="">
+					<h1>Project Six</h1>
+					<a href="#">View Project &#8594;</a>
+				</span>
+			</div> -->
 		</div>
-		<div class="contact-xs">
+		<!-- <div class="contact-xs">
 
 		</div> -->
 
