--- a/index.html
+++ b/index.html
@@ -38,14 +38,7 @@
 			</div>
 		</div>
 		<div class="projects-xs">
-			<h1>12</h1>
 			<div class="project-card">
-
-				<!-- <img src="images\img\_105966414_gettyimages-871919258.jpg" alt="">
-				<h1>Project Two</h1>
-				<a href="#">View Project &#8594;</a> -->
-			</div>
-			<!-- <div class="project-card">
 				<span>
 					<img src="images\img\_105966414_gettyimages-871919258.jpg" alt="">
 					<h1>Project One</h1>
@@ -86,11 +79,28 @@
 					<h1>Project Six</h1>
 					<a href="#">View Project &#8594;</a>
 				</span>
-			</div> -->
+			</div>
 		</div>
-		<!-- <div class="contact-xs">
+		<div class="contact-xs">
+			<h1>Get In Touch</h1>
+			<p>Please feel free to contact me
+				by telephone or email and I will
+				 be sure to get back to you as soon
+				 as possible.</p>
+			<h1>+44 7804 696387</h1>
+			<h2>ekoncevicius@gmail.com</h2>
+			<p>some text here</p>
+			<form class="contact-form" action="#" method="post">
+				<input type="text" name="name" placeholder="First name">
+				<input type="text" name="last-name" placeholder="Last name">
+				<input type="email" name="email" placeholder="Email Address">
+				<input type="tel" name="Telephone" placeholder="Telephone Number">
+				<input type="text" name="subject" placeholder="Subject">
+				<textarea name="message" rows="8" cols="80"></textarea>
+				<button type="sumbit" name="button">Submit</button>
+			</form>
 
-		</div> -->
+		</div>
 
 
 
