--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Edgaras Koncevicius">
 	<title>Edgaras Koncevicius Portfolio</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://kit.fontawesome.com/46c0e5fc09.js" crossorigin="anonymous"></script>
+	<script src="main.js" charset="utf-8"></script>
 </head>
 <body>
-	<div class="container">
+	<div class="wrapper">
 		<div class="nav-xs">
 				<div class="logo">
 					<h1>EK</h1>
@@ -20,90 +21,108 @@
 					<div class="ham2"></div>
 					<div class="ham3"></div>
 				</div>
+				<div id="nav" class="navigation">
+					<ul>
+						<li>
+							<a href="#">About Me</a>
+						</li>
+						<li>
+							<a href="#">My Portfolio</a>
+						</li>
+						<li>
+							<a href="#">Coding Examples</a>
+						</li>
+						<li>
+							<a href="#">SCS Scheme</a>
+						</li>
+						<li>
+							<a href="#">Contact me</a>
+						</li>
+					</ul>
+				</div>
 		</div>
-		<div class="banner-xs">
-			<div class="card">
-				<h3>My name is</h3>
-				<h1>Edgaras Koncevicius</h1>
-				<h3>I'm web developer</h3>
+		<div class="container">
+			<div class="banner-xs">
+				<div class="card">
+					<h3>My name is</h3>
+					<h1>Edgaras Koncevicius</h1>
+					<h3>I'm web developer</h3>
+				</div>
+				<div class="scroll-down">
+					<a href="#projects">
+						<p>scroll <br>
+							down<br>
+						<i class="fa-solid fa-chevron-down"></i>
+					</p>
+					</a>
+
+				</div>
 			</div>
-			<div class="scroll-down">
-				<a href="#">
-					<p>scroll <br>
-						down<br>
-					<i class="fa-solid fa-chevron-down"></i>
-				</p>
-				</a>
+			<div id="projects" class="projects-xs">
+				<div class="project-card">
+					<span>
+						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
+						<h1>Project One</h1>
+						<a href="#">View Project &#8594;</a>
+					</span>
+				</div>
+				<div class="project-card">
+					<span>
+						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
+						<h1>Project Two</h1>
+						<a href="#">View Project &#8594;</a>
+					</span>
+				</div>
+				<div class="project-card">
+					<span>
+						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
+						<h1>Project Three</h1>
+						<a href="#">View Project &#8594;</a>
+					</span>
+				</div>
+				<div class="project-card">
+					<span>
+						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
+						<h1>Project Four</h1>
+						<a href="#">View Project &#8594;</a>
+					</span>
+				</div>
+				<div class="project-card">
+					<span>
+						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
+						<h1>Project Five</h1>
+						<a href="#">View Project &#8594;</a>
+					</span>
+				</div>
+				<div class="project-card">
+					<span>
+						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
+						<h1>Project Six</h1>
+						<a href="#">View Project &#8594;</a>
+					</span>
+				</div>
+			</div>
+			<div class="contact-xs">
+				<h1>Get In Touch</h1>
+				<p>Please feel free to contact me
+					by telephone or email and I will
+					 be sure to get back to you as soon
+					 as possible.</p>
+				<h1>+44 7804 696387</h1>
+				<h2>ekoncevicius@gmail.com</h2>
+				<p>some text here</p>
+				<form class="contact-form" action="#" method="post">
+					<input type="text" name="name" placeholder="First name">
+					<input type="text" name="last-name" placeholder="Last name">
+					<input type="email" name="email" placeholder="Email Address">
+					<input type="tel" name="Telephone" placeholder="Telephone Number">
+					<input type="text" name="subject" placeholder="Subject">
+					<textarea name="message" rows="8" cols="80" placeholder="Your message here..."></textarea>
+					<button type="submit" name="button">Submit</button>
+				</form>
 
 			</div>
 		</div>
-		<div class="projects-xs">
-			<div class="project-card">
-				<span>
-					<img src="images\img\_105966414_gettyimages-871919258.jpg" alt="">
-					<h1>Project One</h1>
-					<a href="#">View Project &#8594;</a>
-				</span>
-			</div>
-			<div class="project-card">
-				<span>
-					<img src="images\img\2018-03-12-image-4.webp" alt="">
-					<h1>Project Two</h1>
-					<a href="#">View Project &#8594;</a>
-				</span>
-			</div>
-			<div class="project-card">
-				<span>
-					<img src="images\img\beboy-1280x720.jpg" alt="">
-					<h1>Project Three</h1>
-					<a href="#">View Project &#8594;</a>
-				</span>
-			</div>
-			<div class="project-card">
-				<span>
-					<img src="images\img\file.jpg" alt="">
-					<h1>Project Four</h1>
-					<a href="#">View Project &#8594;</a>
-				</span>
-			</div>
-			<div class="project-card">
-				<span>
-					<img src="images\img\WWW_WebBirthday_2018.jpg" alt="">
-					<h1>Project Five</h1>
-					<a href="#">View Project &#8594;</a>
-				</span>
-			</div>
-			<div class="project-card">
-				<span>
-					<img src="images\img\august-1-world-wide-web-day.webp" alt="">
-					<h1>Project Six</h1>
-					<a href="#">View Project &#8594;</a>
-				</span>
-			</div>
-		</div>
-		<div class="contact-xs">
-			<h1>Get In Touch</h1>
-			<p>Please feel free to contact me
-				by telephone or email and I will
-				 be sure to get back to you as soon
-				 as possible.</p>
-			<h1>+44 7804 696387</h1>
-			<h2>ekoncevicius@gmail.com</h2>
-			<p>some text here</p>
-			<form class="contact-form" action="#" method="post">
-				<input type="text" name="name" placeholder="First name">
-				<input type="text" name="last-name" placeholder="Last name">
-				<input type="email" name="email" placeholder="Email Address">
-				<input type="tel" name="Telephone" placeholder="Telephone Number">
-				<input type="text" name="subject" placeholder="Subject">
-				<textarea name="message" rows="8" cols="80"></textarea>
-				<button type="sumbit" name="button">Submit</button>
-			</form>
-
-		</div>
-
-
-
 	</div>
 	<script src="main.js" charset="utf-8"></script>
 </body>
