--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 				<div id="nav" class="navigation">
 					<ul>
 						<li>
-							<a href="#">About Me</a>
+							<a href="about.html">About Me</a>
 						</li>
 						<li>
-							<a href="#">My Portfolio</a>
+							<a href="#projects">My Portfolio</a>
 						</li>
 						<li>
-							<a href="#">Coding Examples</a>
+							<a href="coding.html">Coding Examples</a>
 						</li>
 						<li>
-							<a href="#">SCS Scheme</a>
+							<a href="scheme.html">SCS Scheme</a>
 						</li>
 						<li>
-							<a href="#">Contact me</a>
+							<a href="#contact">Contact me</a>
 						</li>
 					</ul>
 				</div>
@@ -44,9 +44,11 @@
 		<div class="container">
 			<div class="banner-xs">
 				<div class="card">
-					<h3>My name is</h3>
-					<h1>Edgaras Koncevicius</h1>
-					<h3>I'm web developer</h3>
+					<div class="card-inner">
+						<h3>My name is</h3>
+						<h1>Edgaras Koncevicius</h1>
+						<h3>I'm web developer</h3>
+					</div>
 				</div>
 				<div class="scroll-down">
 					<a href="#projects">
@@ -102,7 +104,7 @@
 					</span>
 				</div>
 			</div>
-			<div class="contact-xs">
+			<div id="contact" class="contact-xs">
 				<h1>Get In Touch</h1>
 				<p>Please feel free to contact me
 					by telephone or email and I will
@@ -123,7 +125,7 @@
 
 			</div>
 		</div>
-	</div>	
+	</div>
 	<script src="main.js" charset="utf-8"></script>
 </body>
 </html>
