--- a/scheme.html
+++ b/scheme.html
@@ -1,17 +1,114 @@
-Introduction to Scion Coalition Scheme
-The Scion Coalition Scheme is an intensive, specially tailored training program run by Netmatters in order to give willing candidates the opportunity to enter the industry as web developers. Under the supervision of senior web developers, scions generally aim to complete training within six to nine months. The course is intensive and therefore the level of learning achieved is extensive in a short space of time.
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="Edgaras Koncevicius">
+	<title>Edgaras Koncevicius Portfolio</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/46c0e5fc09.js" crossorigin="anonymous"></script>
+	<script src="main.js" charset="utf-8"></script>
+</head>
+<body>
+	<div class="wrapper">
+		<div class="nav-xs">
+				<div class="logo">
+					<h1>EK</h1>
+				</div>
+				<div class="menu-xs" onclick="hamFunction(this)">
+					<div class="ham1"></div>
+					<div class="ham2"></div>
+					<div class="ham3"></div>
+				</div>
+				<div id="nav" class="navigation">
+					<ul>
+						<hr>
+						<li>
+							<a href="about.html">About Me</a>
+						</li>
+						<li>
+							<a href="/#projects">My Portfolio</a>
+						</li>
+						<li>
+							<a href="coding.html">Coding Examples</a>
+						</li>
+						<li>
+							<a href="scheme.html">SCS Scheme</a>
+						</li>
+						<hr>
+						<li>
+							<a href="/#contact">Contact me</a>
+						</li>
+						<hr>
+					</ul>
+				</div>
+		</div>
+		<div class="container">
+      <div class="scheme">
+        <h1>Introduction to Scion Coalition Scheme</h1>
+        <p>The Scion Coalition Scheme is an intensive,
+           specially tailored training program run
+            by Netmatters in order to give willing
+            candidates the opportunity to enter the industry
+            as web developers. Under the supervision of senior
+             web developers, scions generally aim to complete training
+              within six to nine months. The course is intensive and
+              therefore the level of learning achieved is extensive in a
+               short space of time.</p>
 
-Treehouse
-Treehouse is an online learning community, featuring videos covering a number of topics from basic HTML to C# programming, iOS development, data analysis, and more. By completing courses users can earn points, allowing them to track their progress and see how much they?ve covered in certain areas.
-Total Score
-teamtreehouse.com/xxxxx
+        <h1>Treehouse</h1>
+        <p>Treehouse is an online learning community, featuring
+           videos covering a number of topics from basic
+           HTML to C# programming, iOS development, data analysis,
+           and more. By completing courses users can earn points,
+            allowing them to track their progress and see how much
+            they?ve covered in certain areas.</p>
 
-About Netmatters
-Established in 2008
-Norfolk's leading technology company
-Winner of the Princess Royal Training Award
-Winner of EDP Skills of Tomorrow Award
-80+ staff, 2 locations across Norfolk
-Digital Marketing, Website & Software development & IT Support
-Broad spectrum of clients, working nationwide
-Operate to strict company values
+        <h2>Total Score: 3,746</h2>
+        <a href="teamtreehouse.com/edgaraskoncevicius">My profile</a>
+
+        <h1>About Netmatters</h1>
+        <p>
+          Established in 2008 <br>
+          Norfolk's leading technology company<br>
+          Winner of the Princess Royal Training Award<br>
+          Winner of EDP Skills of Tomorrow Award<br>
+          80+ staff, 2 locations across Norfolk<br>
+          Digital Marketing, Website & Software development & IT Support<br>
+          Broad spectrum of clients, working nationwide<br>
+          Operate to strict company values</p>
+
+      </div>
+			<div id="contact" class="contact-xs">
+				<div class="info">
+					<h1>Get In Touch</h1>
+					<h4>Please feel free to contact me
+						by telephone or email and I will
+						 be sure to get back to you as soon
+						 as possible.</h4>
+					<h1>+44 7804 696387</h1>
+					<h2>ekoncevicius@gmail.com</h2>
+
+				</div>
+				<form class="contact-form" action="#" method="post">
+
+					<div class="name-lastname">
+						<input class="in-name" type="text" name="name" placeholder="First name">
+						<input class="in-lastname" type="text" name="last-name" placeholder="Last name">
+					</div>
+
+					<input type="email" name="email" placeholder="Email Address">
+					<input type="tel" name="Telephone" placeholder="Telephone Number">
+					<input type="text" name="subject" placeholder="Subject">
+					<textarea name="message" rows="8" cols="80" placeholder="Your message here..."></textarea>
+					<button type="submit" name="button">Submit</button>
+				</form>
+
+			</div>
+		</div>
+	</div>
+	<script src="main.js" charset="utf-8"></script>
+</body>
+</html>
