--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<a href="about.html">About Me</a>
 						</li>
 						<li>
-							<a href="#projects">My Portfolio</a>
+							<a href="index.html#projects">My Portfolio</a>
 						</li>
 						<li>
 							<a href="coding.html">Coding Examples</a>
@@ -39,7 +39,7 @@
 						</li>
 						<hr>
 						<li>
-							<a href="#contact">Contact me</a>
+							<a href="index.html#contact">Contact me</a>
 						</li>
 						<hr>
 					</ul>
