--- a/scheme.html
+++ b/scheme.html
@@ -67,7 +67,7 @@
             they?ve covered in certain areas.</p>
 
         <h2>Total Score: 3,746</h2>
-        <a href="teamtreehouse.com/edgaraskoncevicius">My profile</a>
+        <a href="https://teamtreehouse.com/edgaraskoncevicius">My profile</a>
 
         <h1>About Netmatters</h1>
         <p>
