--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 	<div class="wrapper">
 		<div class="nav-xs">
 				<div class="logo">
-					<h1>EK</h1>
+						<a href="index.html">
+							<h1>EK</h1>
+						</a>
 				</div>
 				<div class="menu-xs" onclick="hamFunction(this)">
 					<div class="ham1"></div>
