--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/46c0e5fc09.js" crossorigin="anonymous"></script>
+
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
@@ -53,7 +54,8 @@
 					<div class="card-inner">
 						<h3>My name is</h3>
 						<h1>Edgaras Koncevicius</h1>
-						<h3>I'm web developer</h3>
+						<span class="type-effect">I'm web developer</span>
+
 					</div>
 				</div>
 				<div class="scroll-down">
