--- a/coding.html
+++ b/coding.html
@@ -65,15 +65,18 @@
 				<form class="contact-form" action="#" method="post">
 
 					<div class="name-lastname">
-						<input class="in-name" type="text" name="name" placeholder="First name">
-						<input class="in-lastname" type="text" name="last-name" placeholder="Last name">
+						<div class="name">
+							<input type="text" name="firstName" placeholder="First name">
+						</div>
+						<div class="lastName">
+							<input type="text" name="lastName" placeholder="Last name">
+						</div>
 					</div>
-
 					<input type="email" name="email" placeholder="Email Address">
-					<input type="tel" name="Telephone" placeholder="Telephone Number">
+					<input type="text" name="telNumber" placeholder="Telephone Number">
 					<input type="text" name="subject" placeholder="Subject">
-					<textarea name="message" rows="8" cols="80" placeholder="Your message here..."></textarea>
-					<button type="submit" name="button">Submit</button>
+					<textarea name="msg" rows="8" cols="80" placeholder="Your message here..."></textarea>
+					<button type="button" name="button" onclick="return validateForm()">Submit</button>
 				</form>
 
 			</div>
