--- a/index.html
+++ b/index.html
@@ -82,42 +82,54 @@
 				<div class="project-card">
 					<span>
 						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
-						<h1>Project One</h1>
+						<div>
+							<h1>Project One</h1>
+						</div>
 						<a href="#">View Project &#8594;</a>
 					</span>
 				</div>
 				<div class="project-card">
 					<span>
 						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
-						<h1>Project Two</h1>
+						<div>
+							<h1>Project Two</h1>
+						</div>
 						<a href="#">View Project &#8594;</a>
 					</span>
 				</div>
 				<div class="project-card">
 					<span>
 						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
-						<h1>Project Three</h1>
+						<div>
+							<h1>Project Three</h1>
+						</div>
 						<a href="#">View Project &#8594;</a>
 					</span>
 				</div>
 				<div class="project-card">
 					<span>
 						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
-						<h1>Project Four</h1>
+						<div>
+							<h1>Project Four</h1>
+						</div>
 						<a href="#">View Project &#8594;</a>
 					</span>
 				</div>
 				<div class="project-card">
 					<span>
 						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
-						<h1>Project Five</h1>
+						<div>
+							<h1>Project Five</h1>
+						</div>
 						<a href="#">View Project &#8594;</a>
 					</span>
 				</div>
 				<div class="project-card">
 					<span>
 						<img src="images/RMC_ComimgSoon.jpg" alt="coming soon image">
-						<h1>Project Six</h1>
+						<div>
+							<h1>Project Six</h1>
+						</div>
 						<a href="#">View Project &#8594;</a>
 					</span>
 				</div>
