--- a/about.html
+++ b/about.html
@@ -92,6 +92,6 @@
 			</div>
 		</div>
 	</div>
-	<script src="main.js" charset="utf-8"></script>
+	<script src="main.js"></script>
 </body>
 </html>
