--- a/coding.html
+++ b/coding.html
@@ -90,6 +90,6 @@
 			</div>
 		</div>
 	</div>
-	<script src="main.js" charset="utf-8"></script>
+	<script src="main.js"></script>
 </body>
 </html>
